fix compliance of smart contracts and DTO of services + added the ability to create an asset, corporate action vote, IPO mechanism